# pytruco

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile.dev  README.md  docker-compose.yaml  manage.py  pyproject.toml  setup.cfg  sonar-project.properties
docs/: pytruco-entities.excalidraw
pytruco/: asgi.py  settings.py  urls.py  wsgi.py
pytruco/apps/core/: apps.py  business.py  enums.py  game_state.py  models.py  serializers.py
pytruco/apps/core/api/v1/: views.py
pytruco/apps/core/migrations/: 0001_initial.py  0002_round.py  0003_alter_game_points_player1_alter_game_points_player2.py  0004_hand_playercard.py
scripts/: start-dev.sh
tests/: utils.py
tests/apps/core/api/v1/: test_views.py
